2024-12-14 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/typeof_retfptr.c:
	  Test for a function pointer idiom becoming popular with C23.
	* src/mcs51/gen.c,
	  src/hc08/gen.c:
	  Make mcs51, hc08 and s08 list --i-code-in-asm list ic->key prominently, instead of ic->seq (ic->key is more useful for debugging, and used by all other ports).
	* src/SDCCgenconstprop.cc:
	  Fix bug #3806.
	* src/f8/gen.c:
	  Improve f8 codegen.
	* src/f8/peeph.def:
	  Optimize out f8 pop(w)/push(w) pairs.

2024-12-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c:
	  Do not propagate volatile qualifier to iTemp in implicit casts.
	* src/f8/gen.c:
	  f8 codegen improvements.

2024-12-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/f8/gen.c,
	  src/f8/main.c,
	  src/f8/peeph.def:
	  Various improvements, mostly for bitwise operations.

2024-12-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* sim/ucsim/src/sims/f8.src/decode.h,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/imove.cc,
	  src/f8/gen.c:
	  f8 xchw instruction fixes.

2024-12-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c,
	  src/f8/peeph.def:
	  Improve code for f8 bit-field access. Improve code for f8 extended stack access.

2024-12-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/main.c,
	  src/f8/gen.c:
	  Improve f8 codegen for rotations.

2024-12-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  f8 carry bit caching fix. Some f8 code generation improvements.

2024-12-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/peeph.def:
	  Optimize out some more redundant loads for f8.

2024-12-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/f8/_modsint.s,
	  device/lib/f8/_moduint.s,
	  device/lib/f8/Makefile.in,
	  device/lib/f8/_divsint.s,
	  device/lib/f8/_divuint.s: