@@ -1,5 +1,10 @@
 2024-12-14 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCgenconstprop.cc:
+	  Fix bug #3807.
+
+2024-12-14 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* support/regression/tests/typeof_retfptr.c:
 	  Test for a function pointer idiom becoming popular with C23.
 	* src/mcs51/gen.c,
